--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,13 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Logo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/">secinaction.com</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         {% for item in site.data.navbar %}
-        <a class="nav-item nav-link" href="{{ item.link }}"> {{ item.name }}</a>
+        <li class="nav-item">
+          <a class="nav-link{% if page.url == item.link %} active{% endif %}" aria-current="page" href="{{ item.link }}">{{ item.name }}</a>
+        </li>
         {% endfor %}
-      </div>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+
