--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,24 +9,11 @@
   </head>
   <body>
     {% include navbar.html %}
-    {{ content }}
-    <h2>Posts</h2>
-    <ul>
-      {% for post in site.posts %}
-        <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-        </li>
-      {% endfor %}
-    </ul>
-
-    {% for tag in site.tags %}
-    <h3>{{ tag[0] }}</h3>
-    <ul>
-      {% for post in tag[1] %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
-    {% endfor %}
-    {% include footer.html %}
+    <div class="d-flex">
+      <div class="d-flex flex-column flex-grow-1 p-3 bg-dark" style="min-width: 0;">
+        {{ content }}
+      </div>
+    </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
