--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,5 +2,45 @@
 @import "_variables.scss";
 @import "bootstrap/bootstrap";
 @import "_bootswatch.scss";
+@import "native.scss";
 
 /* Custom Styles */
+
+// Code Blocks - Indent Slightly
+pre {
+    padding-left: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+// Code Blocks - Clean up colors & enable vertical scrolling
+pre {
+    overflow-y: auto;
+    max-height: 300px;
+}
+
+// Table of Contents - Hide Bullets
+#markdown-toc {
+    list-style-type: none;
+}
+
+// Images
+figure.image {
+    // filter: brightness(120%);
+    // filter: contrast(120%);
+    filter: drop-shadow(5px 5px 10px #000);
+}
+
+figure.image {
+    // max-width: 30%;
+    font-style: italic;
+    font-size: smaller;
+    text-indent: 0;
+    // margin: 0.5em;
+    // padding: 0.5em;
+}
+
+// figure.image > img {
+//     width:100%;
+//     min-height:100%;
+// }
